syntax = "proto3";
option go_package = "github.com/opendedup/sdfs-client-go/sdfs/;sdfs";
package org.opendedup.grpc;
import "FileInfo.proto";

//option java_multiple_files = true;

message SDFSEvent {
    int64 startTime = 1;
    int64 endTime = 2;
    string level = 3;
    string type = 4;
    string target = 5;
    string shortMsg = 6;
    string longMsg = 7;
    double percentComplete = 8;
    int64 maxCount = 9;
    int64 currentCount = 10;
    string uuid = 11;
    string parentUuid = 12;
    string extendedInfo = 13;
    repeated string childrenUUid = 14;
    bool success = 15;
    map<string,string> attributes = 16;
}

message SDFSEventRequest {
    string uuid = 1;
    int64 pvolumeID =2;
}

message SDFSEventResponse {
    string error = 1;
    errorCodes errorCode = 2;
    SDFSEvent event = 3;
}

message SDFSEventListRequest {
    int64 pvolumeID =1;
}

message SDFSEventListResponse {
    string error = 1;
    errorCodes errorCode = 2;
    repeated SDFSEvent events = 3;
}

message SDFSEventsRequest {
    repeated string uuid = 1;
    int64 pvolumeID =2;
}

message SDFSEventsResponse {
    repeated SDFSEvent events = 1;
    errorCodes errorCode = 2;
    string error = 3;
}


service SDFSEventService {
    rpc GetEvent(SDFSEventRequest) returns (SDFSEventResponse);
    rpc GetEvents(SDFSEventsRequest) returns (SDFSEventsResponse);
    rpc ListEvents(SDFSEventListRequest) returns (SDFSEventListResponse);
    rpc SubscribeEvent(SDFSEventRequest) returns(stream SDFSEventResponse);
}